# opt-timeline

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
.github/workflows/: update-data.yml
dashboard/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/data/: meta.json  timeline.csv
dashboard/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
dashboard/src/app/api/data/: route.ts
dashboard/src/app/api/meta/: route.ts
dashboard/src/components/: charts.tsx  country-breakdown.tsx  data-table.tsx  explorer.tsx  filters.tsx  footer.tsx  milestone-breakdown.tsx  nav.tsx  personal-timeline.tsx  stage-funnel.tsx  stats-cards.tsx  theme-toggle.tsx  user-journey.tsx  where-are-you.tsx
dashboard/src/components/ui/: badge.tsx  card.tsx  select.tsx
dashboard/src/lib/: data.ts  supabase.ts  types.ts  utils.ts
scraper/: .env.example  pyproject.toml
scraper/src/reddit_opt_scraper/: config.py  exporter.py  fetcher.py  main.py  parser.py  supastore.py
supabase/: config.toml
supabase/migrations/: 20260602164135_init_timeline.sql
